# bsd

./: Dockerfile  LICENSE  README.md  app.py  generate_mock_data.py  pyproject.toml
src/data_layer/: models.py
src/services/: categorizer.py  predictor.py
src/ui/: charts.py  kpi.py
tests/: test_categorizer.py  test_predictor.py
