[project]
name = "bank-statement-dashboard"
version = "0.1.0"
description = "Real-time bank statement dashboard with ML predictions"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = []

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "pandas.*",
    "scikit_learn.*",
    "sklearn.*",
    "plotly.*",
    "streamlit.*"
]
ignore_missing_imports = true
